@@ -13,6 +13,9 @@ dpkg (1.17.19) UNRELEASED; urgency=low
     Prompted by Helmut Grohne <helmut@subdivi.de>.
   * Reverse --verify-format logic to actually accept 'rpm' as valid.
     Closes: #765907
+  * Fix trigger dependency checks and cycle detection.
+    Regression introduced in dpkg 1.17.17.
+    Closes: #765434, #765668, #765734, #765781, #765789, #765952
 
   [ Updated programs translations ]
   * Italian (Milo Casagrande): Closes: #765748
